--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <div class="headdd">
             <h1>OUR SPECIALS</h1>
         </div>
+        <div class="vi">
         <div class="gallery">
             <div class="element">
                 <img src="images/coffee1.jpeg" alt="">
@@ -70,15 +71,32 @@
         </div>
         <div class="gallery">
             <div class="element">
-                <img src="images/coffee1.jpeg" alt="">
+                <img src="images/koffe1.jpg" alt="">
             </div>
             <div class="element">
-                <img src="images/coffee2.jpeg" alt="">
+                <img src="images/koffe2.jpg" alt="">
             </div>
             <div class="element">
-                <img src="images/coffee3.jpeg" alt="">
+                <img src="images/koffee3.jpg" alt="">
             </div>
+        </div>
         </div>
     </section>
+    <section class="new">
+        <div= class="sob">
+            <div class="elem">
+            <h1>hello</h1>
+            <p>47320948043435jfsdghd;lkjgf;sdkjfsgfdjf;afj</p>
+            </div>
+            <div class="elem">
+            <h1>hello</h1>
+            <p>47320948043435jfsdghd;lkjgf;sdkjfsgfdjf;afj</p>
+            </div>
+            <div class="elem">
+            <h1>hello</h1>
+            <p>47320948043435jfsdghd;lkjgf;sdkjfsgfdjf;afj</p>
+            </div>
+        </div>
+</section>
 </body>
 </html>
