--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="navber-mobile">
+        <nav class="navv-mobile">
+            <div class="navelmob">
+                <a href=""><img src="images/home.png" alt=""></a>
+                <a href=""><img src="images/coffee.png" alt=""></a>
+                <a href=""><img src="images/bakry.png" alt=""></a>
+                <a href=""><img src="images/about.png" alt=""></a>
+                <a href=""><img src="images/shop.png" alt=""></a>
+                <a href=""><img src="images/login.png" alt=""></a>
+            </div>
+        </nav>
+    </section>
     <section class="navber">
         <nav class="navv">
             <div class="logo"><a href="">COFFEE</a></div>
@@ -69,7 +81,7 @@
                 <img src="images/coffee3.jpeg" alt="">
             </div>
         </div>
-        <div class="gallery">
+        <div class="gallery"> 
             <div class="element">
                 <img src="images/koffe1.jpg" alt="">
             </div>
