--- a/index.html
+++ b/index.html
@@ -73,23 +73,29 @@
         <div class="gallery">
             <div class="element">
                 <img src="images/coffee1.jpeg" alt="">
+                <h1>Latte</h1>
             </div>
             <div class="element">
                 <img src="images/coffee2.jpeg" alt="">
+                <h1>Espresso</h1>
             </div>
             <div class="element">
                 <img src="images/coffee3.jpeg" alt="">
+                <h1>Americano</h1>
             </div>
         </div>
         <div class="gallery"> 
             <div class="element">
                 <img src="images/koffe1.jpg" alt="">
+                <h1>Espresso2</h1>
             </div>
             <div class="element">
                 <img src="images/koffe2.jpg" alt="">
+                <h1>Coffee + Cookie</h1>
             </div>
             <div class="element">
                 <img src="images/koffee3.jpg" alt="">
+                <h1>Cappuccino</h1>
             </div>
         </div>
         </div>
